--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background: rgb(125, 198, 205);
-    color: rgb(45, 45, 45);
+    background: rgb(223, 174, 207);
+    color: rgb(29, 28, 28);
     padding: 10px;
     font-family: Arial, sans-serif;
 }
@@ -12,7 +12,7 @@ body {
 
 /* navigation menu */
 nav {
-    background: rgb(239, 80, 41);
+    background: rgb(255, 255, 255);
     margin: 0 auto;
     display: flex;
     padding: 10px;
@@ -21,7 +21,7 @@ nav {
 h1 {
     display: flex;
     align-items: center;
-    color: white;
+    color: rgb(9, 0, 0);
     flex: 1;
     margin: 0;
 }
@@ -40,12 +40,12 @@ h1 {
 
 a {
     text-decoration: none;
-    color: #fff;
+    color: rgb(223, 174, 207);
 }
 
 /* main container area beneath menu */
 main {
-    background: rgb(245, 238, 219);
+    background: rgb(219, 245, 243);
     display: flex;
     margin-top: 20px;
 }
@@ -86,14 +86,14 @@ h2, h3 {
   }
   
   #portfolio li {
-    background: #fff;
+    background: #ffffff;
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
   }
   
   #portfolio li:hover {
-    background: #eee;
+    background: #000000;
   }
   
   #portfolio a {
